set sm4 base64