@@ -1,8 +1,8 @@
 package org.brewchain.ecrypto.sm;
 
+import org.apache.commons.codec.binary.Base64;
+import org.bouncycastle.util.encoders.Base64Encoder;
 import org.brewchain.core.crypto.ECKey;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -41,7 +41,8 @@ public class SM4Utils {
             SM4 sm4 = new SM4();
             sm4.sm4_setkey_enc(ctx, keyBytes);
             byte[] encrypted = sm4.sm4_crypt_ecb(ctx, plainText.getBytes("GBK"));
-            String cipherText = new BASE64Encoder().encode(encrypted);
+            String cipherText = Base64.encodeBase64String(encrypted);
+//            		new Base64Encoder()(encrypted);
             if (cipherText != null && cipherText.trim().length() > 0)
             {
                 Pattern p = Pattern.compile("\\s*|\t|\r|\n");
@@ -77,7 +78,7 @@ public class SM4Utils {
 
             SM4 sm4 = new SM4();
             sm4.sm4_setkey_dec(ctx, keyBytes);
-            byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+            byte[] decrypted = sm4.sm4_crypt_ecb(ctx, Base64.decodeBase64(cipherText));
             return new String(decrypted, "GBK");
         }
         catch (Exception e)
@@ -111,7 +112,7 @@ public class SM4Utils {
             SM4 sm4 = new SM4();
             sm4.sm4_setkey_enc(ctx, keyBytes);
             byte[] encrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, plainText.getBytes("GBK"));
-            String cipherText = new BASE64Encoder().encode(encrypted);
+            String cipherText = Base64.encodeBase64String(encrypted);
             if (cipherText != null && cipherText.trim().length() > 0)
             {
                 Pattern p = Pattern.compile("\\s*|\t|\r|\n");
@@ -150,7 +151,7 @@ public class SM4Utils {
 
             SM4 sm4 = new SM4();
             sm4.sm4_setkey_dec(ctx, keyBytes);
-            byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, new BASE64Decoder().decodeBuffer(cipherText));
+            byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, Base64.decodeBase64(cipherText));
             return new String(decrypted, "GBK");
         }
         catch (Exception e)
